Tue Jul  3 16:40:32 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * java/dds/OpenDDS_DCPS_jni.cpp:

          ACE::init() is now required since we don't call ORB_init() until
          later (and only if it's needed).  Java programs don't have ACE_TMAIN
          to provide the automatic ACE::init() for us.

        * java/tests/builtintopics/run_test.pl:
        * java/tests/complex_idl/run_test.pl:

          Removed fixed port numbers in -ORBListenEndpoints.

Tue Jul  3 14:24:35 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/features/org.opendds.modeling.feature/feature.xml:
        * tools/modeling/features/org.opendds.modeling.site/site.xml:
        * tools/modeling/plugins/com.ociweb.emf.util/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/com.ociweb.gmf/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.common/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.common/about.properties:
        * tools/modeling/plugins/org.opendds.modeling.diagram.datalib/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.diagram.main/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.diagram.policylib/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.gmf/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DataLib.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/MainDiagram.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/PolicyLib.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.graphics/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.help/META-INF/MANIFEST.MF: