@@ -1,8 +1,8 @@
-This is OpenDDS version 3.1, released Wed Mar 28 17:41:16 UTC 2012.
+This is OpenDDS version 3.2, released Tue Jul  3 17:57:50 UTC 2012.
 
 8<----------8<----------8<----------8<----------8<----------8<----------8<----
 
-    OpenDDS VERSION: 3.1
+    OpenDDS VERSION: 3.2
     TAO VERSION:
 
     HOST MACHINE and OPERATING SYSTEM:
