@@ -1,4 +1,4 @@
-This is OpenDDS version 3.1, released Wed Mar 28 17:41:16 UTC 2012.
+This is OpenDDS version 3.2, released Tue Jul  3 17:57:50 UTC 2012.
 
 This software is open source and free of licensing fees.  See the
 LICENSE file (in this directory) for license details.
