@@ -7,6 +7,6 @@
  */
 
 #define DDS_MAJOR_VERSION 3
-#define DDS_MINOR_VERSION 1
+#define DDS_MINOR_VERSION 2
 #define DDS_MICRO_VERSION 0
-#define DDS_VERSION "3.1"
+#define DDS_VERSION "3.2"
