@@ -1,3 +1,7 @@
+Tue Jul  3 17:57:50 UTC 2012  Byron Harris  <harrisb@ociweb.com>
+
+        * OpenDDS version 3.2 released.
+
 Tue Jul  3 16:40:32 UTC 2012  Adam Mitz  <mitza@ociweb.com>
 
         * java/dds/OpenDDS_DCPS_jni.cpp:
